add readme, license

--- a/package.json
+++ b/package.json
@@ -7,6 +7,5 @@
   "scripts": {
     "dev": "mkdir -p dist && dotnet fable clean --yes --outDir dist && dotnet fable watch src --outDir dist --runWatch node dist/App.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Sean Scally"
 }
